--- a/stylesheets/ui-variables.less
+++ b/stylesheets/ui-variables.less
@@ -62,6 +62,9 @@
 @tree-view-background-color: @tool-panel-background-color;
 @tree-view-border-color: @tool-panel-border-color;
 
+@scrollbar-background-color: #333333;
+@scrollbar-color: #5B5B5B;
+
 @ui-site-color-1: @background-color-success; // green
 @ui-site-color-2: @background-color-info; // blue
 @ui-site-color-3: @background-color-warning; // orange
